# vex-mcp

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  skills-lock.json  vex.toml
.github/workflows/: ci.yml  release.yml
docs/: roadmap.md
docs/adr/: 0001-server-identity-is-config-name.md  0002-unrecognized-requests-fail-closed.md  0003-confirmation-mechanism-deferred.md  0004-audit-chain-spans-lifetime.md
docs/reference/: injection-pattern-research.md
npm/: build.mjs
npm/vex-mcp/: README.md  package.json
pypi/: README.md  build.py  pyproject.toml
src/: main.rs
src/audit/: mod.rs
src/cmd/: doctor.rs  init.rs  mod.rs
src/config/: mod.rs
src/detect/: drift.rs  mod.rs  poisoning.rs
src/domain/: mod.rs
src/gateway/: mod.rs
src/pin/: mod.rs
src/policy/: mod.rs
src/protocol/: mod.rs
src/rate_limit/: mod.rs
src/transport/: mod.rs
