[package]
name = "vex-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["process", "io-util", "macros", "rt-multi-thread", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
regex = "1.12.4"
