[package]
name = "vex-mcp"
version = "0.2.1"
edition = "2024"
description = "A transparent MCP security proxy: inspects tool descriptions for injection, pins tool definitions to detect rug-pulls, enforces a default-deny capability policy, and writes a tamper-evident audit log."
license = "MIT"
repository = "https://github.com/mdombrov-33/vex-mcp"
homepage = "https://github.com/mdombrov-33/vex-mcp"
readme = "README.md"
keywords = ["mcp", "security", "proxy", "llm", "ai-security"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["process", "io-util", "macros", "rt-multi-thread", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
regex = "1.12.4"
sha2 = "0.11.0"
hex = "0.4.3"
anyhow = "1.0.102"
toml = "1.1.2"
unicode-security = "0.1.2"
globset = "0.4.18"

[dev-dependencies]
tempfile = "3.27.0"
